# fetch-fizz

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
blueprints/: __init__.py  team_demo.py
docs/: architecture.md  choreorobotics.md  foxglove.md  team-onboarding.md  work-areas.md
docs/adr/: 001-llm-boundary.md
scripts/: run_agentic.sh  run_demo.py  run_nav.sh  run_replay.sh
skills/: __init__.py  team_skills.py
tests/: __init__.py  test_mcp_tools.py  test_workflow_offline.py
workflow/: __init__.py  orchestrator.py
workflow/prompts/: manifest.yaml
workflow/prompts/v1/: system.txt
